--- a/qiskit/hello_world.ipynb
+++ b/qiskit/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'1.4.1'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐               \n",
-       "q_0: ┤ H ├──■────■───────\n",
-       "     └───┘┌─┴─┐┌─┴─┐┌───┐\n",
-       "q_1: ─────┤ X ├┤ H ├┤ T ├\n",
-       "          └───┘└───┘└───┘</pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐\n",
+       "q_0: ┤ H ├\n",
+       "     └───┘\n",
+       "q_1: ─────\n",
+       "          </pre>"
       ],
       "text/plain": [
-       "     ┌───┐               \n",
-       "q_0: ┤ H ├──■────■───────\n",
-       "     └───┘┌─┴─┐┌─┴─┐┌───┐\n",
-       "q_1: ─────┤ X ├┤ H ├┤ T ├\n",
-       "          └───┘└───┘└───┘"
+       "     ┌───┐\n",
+       "q_0: ┤ H ├\n",
+       "     └───┘\n",
+       "q_1: ─────\n",
+       "          "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,12 +62,6 @@
    "source": [
     "# Add a Hadamard gate to qubit 0\n",
     "qc.h(0)\n",
-    " \n",
-    "# Perform a controlled-X gate on qubit 1, controlled by qubit 0\n",
-    "qc.cx(0, 1)\n",
-    "qc.ch(0, 1)\n",
-    "\n",
-    "qc.t(1)\n",
     "\n",
     "qc.draw()"
    ]
