--- a/qiskit/hello_world.ipynb
+++ b/qiskit/hello_world.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'1.4.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,27 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐\n",
-       "q_0: ┤ H ├\n",
-       "     └───┘\n",
-       "q_1: ─────\n",
-       "          </pre>"
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">     ┌───┐     \n",
+       "q_0: ┤ H ├─|0>─\n",
+       "     └───┘┌───┐\n",
+       "q_1: ─|0>─┤ X ├\n",
+       "          └───┘</pre>"
       ],
       "text/plain": [
-       "     ┌───┐\n",
-       "q_0: ┤ H ├\n",
-       "     └───┘\n",
-       "q_1: ─────\n",
-       "          "
+       "     ┌───┐     \n",
+       "q_0: ┤ H ├─|0>─\n",
+       "     └───┘┌───┐\n",
+       "q_1: ─|0>─┤ X ├\n",
+       "          └───┘"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,9 @@
    "source": [
     "# Add a Hadamard gate to qubit 0\n",
     "qc.h(0)\n",
-    "\n",
+    "qc.reset(0)\n",
+    "qc.reset(1)\n",
+    "qc.x(1)\n",
     "qc.draw()"
    ]
   },
